fix: Fixed gap problem

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,5 @@ body,
 .App {
 	height: 100%;
 	background-color: #444;
-	overflow-y: scroll;
-	overflow-x: auto;
+	overflow: auto;
 }
