--- a/src/features/home/home.module.css
+++ b/src/features/home/home.module.css
@@ -133,6 +133,12 @@
 		font-size: 3.5rem;
 		text-align: center;
 	}
+
+	.btnContainer {
+		flex-direction: column;
+		align-items: center;
+		gap: 0;
+	}
 }
 
 /***** Mobile ****/
@@ -157,6 +163,12 @@
 	.btnContainer {
 		flex-direction: column;
 		align-items: center;
-		gap: 1.5rem;
+		gap: 0;
 	}
+}
+
+.btn,
+.btn:link,
+.btn:active {
+	margin-bottom: 1.5rem;
 }
