--- a/src/features/projects/intro_MyReads/introMyReads.module.css
+++ b/src/features/projects/intro_MyReads/introMyReads.module.css
@@ -91,7 +91,7 @@
 
 	.introText {
 		font-size: 1.3rem;
-		margin-bottom: 0.5rem;
+		margin-bottom: 1rem;
 	}
 
 	.pageLink {
