--- a/src/features/projects/intro_WouldYouRather/introWouldYouRather.module.css
+++ b/src/features/projects/intro_WouldYouRather/introWouldYouRather.module.css
@@ -116,7 +116,7 @@
 
 	.introText {
 		font-size: 1.3rem;
-		margin-bottom: 0.5rem;
+		margin-bottom: 1rem;
 	}
 
 	.pageLink {
