--- a/src/features/projects/projects.module.css
+++ b/src/features/projects/projects.module.css
@@ -94,14 +94,14 @@
 	}
 
 	.cardBox {
-		gap: 1rem;
-		margin-bottom: 2rem;
+		gap: 0;
+		margin: 2rem 0;
 	}
 
 	.card {
 		height: 49%;
 		width: 85%;
-		margin: 0 auto;
+		margin: 0 auto 1.5rem auto;
 	}
 
 	.cardHeading {
